storage : handle dummy file with storage message queue